Real fix to the gap bug. Ref: https://github.com/metafizzy/packery/issues/68

--- a/src/sass/layout/layout.scss
+++ b/src/sass/layout/layout.scss
@@ -43,6 +43,11 @@
 # Layout start >>>
 --------------------------------------------------------------*/
 
+// Packery margin fix
+html { 
+    overflow-y: scroll; 
+}
+
 body
 {
     color: $textcolor;
